CREATE TABLE roles (id TINYINT PRIMARY KEY AUTO_INCREMENT, code VARCHAR(30) NOT NULL UNIQUE, name VARCHAR(100) NOT NULL, description VARCHAR(255));
CREATE TABLE permissions (id SMALLINT PRIMARY KEY AUTO_INCREMENT, code VARCHAR(100) NOT NULL UNIQUE, module VARCHAR(50) NOT NULL, description VARCHAR(255), INDEX idx_permission_module(module));
CREATE TABLE role_permissions (role_id TINYINT NOT NULL, permission_id SMALLINT NOT NULL, PRIMARY KEY(role_id,permission_id), FOREIGN KEY(role_id) REFERENCES roles(id), FOREIGN KEY(permission_id) REFERENCES permissions(id));
CREATE TABLE accounts (id BIGINT PRIMARY KEY AUTO_INCREMENT, role_id TINYINT NOT NULL, google_subject VARCHAR(255) UNIQUE, email VARCHAR(255) NOT NULL UNIQUE, display_name VARCHAR(150) NOT NULL, avatar_url VARCHAR(500), is_active BOOLEAN NOT NULL DEFAULT TRUE, provisioned_by_account_id BIGINT, last_login_at DATETIME(6), created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(role_id) REFERENCES roles(id), FOREIGN KEY(provisioned_by_account_id) REFERENCES accounts(id), INDEX idx_account_role(role_id));
CREATE TABLE customer_profiles (account_id BIGINT PRIMARY KEY, phone VARCHAR(30), preferences TEXT, internal_notes TEXT, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(account_id) REFERENCES accounts(id));
CREATE TABLE staff_profiles (account_id BIGINT PRIMARY KEY, employee_code VARCHAR(50) NOT NULL UNIQUE, job_title VARCHAR(100) NOT NULL, is_bookable BOOLEAN NOT NULL DEFAULT TRUE, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(account_id) REFERENCES accounts(id));
CREATE TABLE services (id BIGINT PRIMARY KEY AUTO_INCREMENT, name VARCHAR(150) NOT NULL UNIQUE, category VARCHAR(100) NOT NULL, description TEXT, image_url VARCHAR(500), base_price DECIMAL(12,2) NOT NULL, minimum_duration_minutes INT NOT NULL, is_duration_adjustable BOOLEAN NOT NULL DEFAULT FALSE, duration_step_minutes INT, price_per_duration_step DECIMAL(12,2), preparation_buffer_minutes INT NOT NULL DEFAULT 0, cleanup_buffer_minutes INT NOT NULL DEFAULT 0, display_order INT NOT NULL DEFAULT 0, is_active BOOLEAN NOT NULL DEFAULT TRUE, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), INDEX idx_services_catalog(category,is_active,display_order), CONSTRAINT chk_service_price CHECK(base_price >= 0), CONSTRAINT chk_service_duration CHECK(minimum_duration_minutes > 0), CONSTRAINT chk_service_buffers CHECK(preparation_buffer_minutes >= 0 AND cleanup_buffer_minutes >= 0));
CREATE TABLE staff_services (staff_account_id BIGINT NOT NULL, service_id BIGINT NOT NULL, PRIMARY KEY(staff_account_id,service_id), FOREIGN KEY(staff_account_id) REFERENCES staff_profiles(account_id), FOREIGN KEY(service_id) REFERENCES services(id));
CREATE TABLE staff_working_hours (id BIGINT PRIMARY KEY AUTO_INCREMENT, staff_account_id BIGINT NOT NULL, day_of_week TINYINT NOT NULL, start_time TIME NOT NULL, end_time TIME NOT NULL, is_active BOOLEAN NOT NULL DEFAULT TRUE, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), UNIQUE KEY uq_staff_hours(staff_account_id,day_of_week,start_time), FOREIGN KEY(staff_account_id) REFERENCES staff_profiles(account_id), CONSTRAINT chk_hours_day CHECK(day_of_week BETWEEN 1 AND 7), CONSTRAINT chk_hours_range CHECK(start_time < end_time));
CREATE TABLE staff_time_off (id BIGINT PRIMARY KEY AUTO_INCREMENT, staff_account_id BIGINT NOT NULL, start_at DATETIME(6) NOT NULL, end_at DATETIME(6) NOT NULL, reason VARCHAR(500), created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(staff_account_id) REFERENCES staff_profiles(account_id), INDEX idx_time_off(staff_account_id,start_at,end_at), CONSTRAINT chk_time_off CHECK(start_at < end_at));
CREATE TABLE bookings (id BIGINT PRIMARY KEY AUTO_INCREMENT, booking_code VARCHAR(32) NOT NULL UNIQUE, customer_account_id BIGINT NOT NULL, staff_account_id BIGINT NOT NULL, status VARCHAR(30) NOT NULL DEFAULT 'PENDING_PAYMENT', assignment_source VARCHAR(20) NOT NULL DEFAULT 'SYSTEM', customer_name_snapshot VARCHAR(150) NOT NULL, customer_email_snapshot VARCHAR(255) NOT NULL, customer_phone_snapshot VARCHAR(30), booking_start DATETIME(6) NOT NULL, booking_end DATETIME(6) NOT NULL, occupied_start DATETIME(6) NOT NULL, occupied_end DATETIME(6) NOT NULL, hold_expires_at DATETIME(6), customer_note TEXT, total_duration_minutes INT NOT NULL, total_amount DECIMAL(12,2) NOT NULL, checked_in_at DATETIME(6), service_started_at DATETIME(6), completed_at DATETIME(6), created_by_account_id BIGINT NOT NULL, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(customer_account_id) REFERENCES customer_profiles(account_id), FOREIGN KEY(staff_account_id) REFERENCES staff_profiles(account_id), FOREIGN KEY(created_by_account_id) REFERENCES accounts(id), INDEX idx_bookings_staff(staff_account_id,occupied_start,occupied_end), INDEX idx_bookings_customer(customer_account_id,booking_start), INDEX idx_bookings_expiry(status,hold_expires_at), CONSTRAINT chk_booking_times CHECK(booking_start < booking_end AND occupied_start < occupied_end), CONSTRAINT chk_booking_values CHECK(total_duration_minutes > 0 AND total_amount >= 0));
CREATE TABLE booking_items (id BIGINT PRIMARY KEY AUTO_INCREMENT, booking_id BIGINT NOT NULL, service_id BIGINT NOT NULL, service_name_snapshot VARCHAR(150) NOT NULL, duration_minutes INT NOT NULL, base_price_snapshot DECIMAL(12,2) NOT NULL, additional_duration_steps INT NOT NULL DEFAULT 0, price_per_step_snapshot DECIMAL(12,2) NOT NULL DEFAULT 0, line_amount DECIMAL(12,2) NOT NULL, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), UNIQUE KEY uq_booking_service(booking_id,service_id), FOREIGN KEY(booking_id) REFERENCES bookings(id), FOREIGN KEY(service_id) REFERENCES services(id), CONSTRAINT chk_item_values CHECK(duration_minutes > 0 AND additional_duration_steps >= 0 AND line_amount >= 0));
CREATE TABLE booking_events (id BIGINT PRIMARY KEY AUTO_INCREMENT, booking_id BIGINT NOT NULL, event_type VARCHAR(50) NOT NULL, actor_account_id BIGINT, message VARCHAR(500) NOT NULL, occurred_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(booking_id) REFERENCES bookings(id), FOREIGN KEY(actor_account_id) REFERENCES accounts(id), INDEX idx_booking_events(booking_id,occurred_at));
CREATE TABLE payments (id BIGINT PRIMARY KEY AUTO_INCREMENT, transaction_code VARCHAR(32) NOT NULL UNIQUE, booking_id BIGINT NOT NULL UNIQUE, status VARCHAR(20) NOT NULL DEFAULT 'UNPAID', method VARCHAR(20) NOT NULL DEFAULT 'QR', amount DECIMAL(12,2) NOT NULL, qr_payload TEXT, paid_at DATETIME(6), refunded_at DATETIME(6), created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(booking_id) REFERENCES bookings(id), CONSTRAINT chk_payment_amount CHECK(amount >= 0));
CREATE TABLE feedback (id BIGINT PRIMARY KEY AUTO_INCREMENT, booking_id BIGINT NOT NULL UNIQUE, rating TINYINT NOT NULL, comment TEXT, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), updated_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(booking_id) REFERENCES bookings(id), CONSTRAINT chk_feedback_rating CHECK(rating BETWEEN 1 AND 5));
CREATE TABLE reschedule_requests (id BIGINT PRIMARY KEY AUTO_INCREMENT, booking_id BIGINT NOT NULL, customer_account_id BIGINT NOT NULL, reason VARCHAR(1000) NOT NULL, status VARCHAR(20) NOT NULL DEFAULT 'REQUESTED', staff_account_id BIGINT, staff_note VARCHAR(1000), created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), resolved_at DATETIME(6), FOREIGN KEY(booking_id) REFERENCES bookings(id), FOREIGN KEY(customer_account_id) REFERENCES accounts(id), FOREIGN KEY(staff_account_id) REFERENCES accounts(id), INDEX idx_reschedule_open(booking_id,status));
CREATE TABLE refresh_sessions (id BIGINT PRIMARY KEY AUTO_INCREMENT, account_id BIGINT NOT NULL, token_hash CHAR(64) NOT NULL UNIQUE, expires_at DATETIME(6) NOT NULL, revoked_at DATETIME(6), created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(account_id) REFERENCES accounts(id), INDEX idx_session_account(account_id,revoked_at));
CREATE TABLE webhook_inbox (sepay_id BIGINT PRIMARY KEY, reference_code VARCHAR(100), content VARCHAR(1000), amount DECIMAL(12,2) NOT NULL, outcome VARCHAR(30) NOT NULL, booking_id BIGINT, received_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), FOREIGN KEY(booking_id) REFERENCES bookings(id), INDEX idx_webhook_outcome(outcome,received_at));
CREATE TABLE outbox_events (id BIGINT PRIMARY KEY AUTO_INCREMENT, topic VARCHAR(100) NOT NULL, aggregate_key VARCHAR(100) NOT NULL, payload TEXT NOT NULL, created_at DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6), published_at DATETIME(6), INDEX idx_outbox_pending(published_at,id));
CREATE TABLE idempotency_keys (account_id BIGINT NOT NULL, request_key VARCHAR(100) NOT NULL, booking_id BIGINT NOT NULL, PRIMARY KEY(account_id,request_key), FOREIGN KEY(account_id) REFERENCES accounts(id), FOREIGN KEY(booking_id) REFERENCES bookings(id));
